for version 4.1
    - Fix bug 431297: Fall back to window title and class name when launching if
      pid does not match. Allows commands that detach and get a new pid (rox)
      to dock correctly.
    - New command line option -n: Specify the string to use for fall back when
      launching a command and a pid match cannot be determined.
    - Fix a bug that prevented the time out for trying to dock and launched
      command from increasing.
    - Menu item for setting the tray icon.
    - Fix bug: Do not quit when closing docked application from tray menu.

for version 4.0
    - 4.0 rewrite complete.

for version 4.0-preview-1
    - Preview release of Qt 4 port.

for version 1.3
    - Fix bug when reading back balloon timeout on session restoration
    - AutoLaunch enhancement (Request user to provide program name when
      autodetection failed)
    - Indonesian translations from Eko Prasetiyo
    - Italian translations from Alessio Cassibba
    - Updated Brazilian Portuguese and polish translations

for version 1.2
    - Polish translations from KonMan
    - Check WM_NAME to support programs like LimeWire (for lavacube)
    - Store entire application path as part of session
    - Move around command line handling code
    - Configure balloon timeout using "-p" (for roopesh)

for version 1.1
    - German translations from Thomas Runge
    - Dialog detection bug. I replaced all LOG with TRACE (Thanks to Novoselic
      who raised a question which helped me notice it)
    - -v Displays the version
    - -b Suppress the warning when docking non-normal dialogs
      (For John Pettigrew)
    - Fix issue when passing large command line to previous instance 
      (Reported by Arseniy Akopyan)

for version 1.0 CR1
    - Russian translations by Aleksey Kirpichnikov
    - Brazilian Portugese translations by Paulo Ruthes
	
for version 1.0
    - Spanish translations are back in (Thanks Edulix)
    - Yet another fix for xmms

for version 1.0 rc2