@@ -30,9 +30,9 @@
 extern bool isNormalWindow(Display *display, Window w);
 extern bool isValidWindowId(Display *display, Window w);
 extern pid_t pid(Display *display, Window w);
-extern Window pidToWid(Display *display, pid_t epid, Window window);
-extern bool analyzeWindow(Display *display, Window w, pid_t epid, const QString &ename);
-extern Window findWindow(Display *display, Window w, bool checkNormality, pid_t epid, const QString &ename);
+extern Window pidToWid(Display *display, Window window, bool checkNormality, pid_t epid);
+extern bool analyzeWindow(Display *display, Window w, const QString &ename);
+extern Window findWindow(Display *display, Window w, bool checkNormality, const QString &ename);
 extern void sendMessage(Display *display, Window to, Window w, const char *type, int format, long mask, void *data, int size);
 extern Window activeWindow(Display *display);
 extern Window selectWindow(Display *display, const char **err = 0);
