@@ -1,9 +1,12 @@
 for version 4.1
     - Fix bug 431297: Fall back to window title and class name when launching if
-      pid does not match. Allows commands that detach and get a new pid (rox)
+      pid changes. Allows commands that detach and get a new pid (rox)
       to dock correctly.
     - New command line option -n: Specify the string to use for fall back when
       launching a command and a pid match cannot be determined.
+    - New command line option -y: Force matching command by title and class
+      name.
+    - New command line option -x: Specify PID of application to dock.
     - Fix a bug that prevented the time out for trying to dock and launched
       command from increasing.
     - Menu item for setting the tray icon.
